# vbfcp_comb

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.common  README.md  setup.sh  setup_lxplus.sh  singularity.sh
app/: manager.cxx
cfg/fcnc/: Organization.dtd  combination.xml  combined.xml  combined_2ch.xml  hbb.xml  hgg.xml  hlep.xml  limit_2D.xml  limit_2D_bb.xml  limit_2D_lep.xml  limit_mu_Hc.xml  limit_mu_Hc_bb.xml  limit_mu_Hc_bb_neg.xml  limit_mu_Hc_lep.xml  limit_mu_Hc_neg.xml  limit_mu_Hu.xml  limit_mu_Hu_bb.xml  limit_mu_Hu_bb_neg.xml  limit_mu_Hu_lep.xml  limit_mu_Hu_neg.xml  list1.txt  list2.txt  only_mu_Hc.xml  only_mu_Hc_0.5.xml  only_mu_Hc_1.0.xml  only_mu_Hc_bb.xml  only_mu_Hc_gg.xml  only_mu_Hc_gg_0.5.xml  only_mu_Hc_lep.xml  only_mu_Hc_lep_0.5.xml  only_mu_Hu.xml  only_mu_Hu_0.5.xml  only_mu_Hu_bb.xml  only_mu_Hu_gg.xml  only_mu_Hu_gg_0.5.xml  only_mu_Hu_lep.xml  only_mu_Hu_lep_0.5.xml  reparamHbb.xml  reparamHgg.xml  reparamHlep.xml
cfg/hcoup_ichep2016/: add_theory_uncert.xml
cfg/high_mass_diphoton/: 13TeV_npmap.xml  13TeV_strong_npmap.xml  13TeV_weak_npmap.xml  8TeV_npmap.xml  8TeV_strong_npmap.xml  8TeV_weak_npmap.xml  combined_1516_Graviton_EKEI_vs_EKHI_add_uncert.xml  combined_1516_Graviton_EKEI_vs_EKHI_strong.xml  combined_1516_Graviton_EKEI_vs_EKHI_weak.xml  combined_2015_Graviton_EKEI_vs_EKHI_2D.xml  combined_2015_Graviton_EKEI_vs_EKHI_add_uncert.xml  combined_2015_Graviton_EKEI_vs_EKHI_strong.xml  combined_2015_Graviton_EKEI_vs_EKHI_weak.xml  combined_2016_Graviton_EKEI_vs_EKHI_add_uncert.xml  combined_2016_Graviton_EKEI_vs_EKHI_strong.xml  combined_2016_Graviton_EKEI_vs_EKHI_weak.xml  combined_graviton_EKHI_dxs_gg_740_v1.xml  combined_graviton_EKHI_dxs_gg_750_v1.xml  combined_graviton_EKHI_dxs_gg_760_v1.xml  combined_graviton_EKHI_dxs_gg_v0.xml  combined_graviton_EKHI_dxs_gg_v1.xml  combined_graviton_EKHI_dxs_qqbar_740_v1.xml  combined_graviton_EKHI_dxs_qqbar_750_v1.xml  combined_graviton_EKHI_dxs_qqbar_760_v1.xml  combined_graviton_EKHI_dxs_qqbar_v0.xml  combined_graviton_EKHI_dxs_qqbar_v1.xml  combined_graviton_EKHI_dxs_v0.xml  combined_graviton_EKHI_ratio_v0.xml  combined_graviton_EKHI_ratio_v1.xml  combined_graviton_ratio_template.xml  combined_graviton_template.xml  combined_scalar_HKHI_dxs_gg_740_v1.xml  combined_scalar_HKHI_dxs_gg_750_v1.xml  combined_scalar_HKHI_dxs_gg_760_v1.xml  combined_scalar_HKHI_dxs_qqbar_740_v1.xml  combined_scalar_HKHI_dxs_qqbar_750_v1.xml  combined_scalar_HKHI_dxs_qqbar_760_v1.xml  combined_scalar_template.xml  combined_scalar_v0.xml  combined_strong_EKEI_EKEI_pdf_v0_gg.xml  (+61 more)
cfg/lhchcg/: 125.09_gg.xml  ATLAS_add_BR_handler_zz_template.xml  ATLAS_combined_asimov.xml  ATLAS_combined_obs.xml  ATLAS_combined_parambrlumi_obs.xml  ATLAS_combined_parambrlumi_toy.xml  ATLAS_combined_postfit.xml  ATLAS_combined_template.xml  ATLAS_combined_toy.xml  ATLAS_hgg_asimov.xml  ATLAS_hgg_change_poi.xml  ATLAS_hgg_npmap.xml  ATLAS_hgg_obs.xml  ATLAS_hgg_postfit.xml  ATLAS_hgg_template.xml  ATLAS_hgg_toy.xml  ATLAS_hzz_asimov.xml  ATLAS_hzz_npmap.xml  ATLAS_hzz_obs.xml  ATLAS_hzz_obs_nick.xml  ATLAS_hzz_postfit.xml  ATLAS_hzz_template.xml  ATLAS_hzz_toy.xml  ATLAS_measurement_parametrization_gamgam_toy.xml  ATLAS_measurement_parametrization_zz_asimov.xml  ATLAS_measurement_parametrization_zz_obs.xml  ATLAS_measurement_parametrization_zz_toy.xml  ATLAS_param_BR_gamgam_asimov.xml  ATLAS_param_BR_gamgam_obs.xml  ATLAS_param_BR_gamgam_toy.xml  ATLAS_param_BR_lumi_gamgam_template.xml  ATLAS_param_BR_lumi_gamgam_toy.xml  ATLAS_param_BR_lumi_zz_asimov.xml  ATLAS_param_BR_lumi_zz_obs.xml  ATLAS_param_BR_lumi_zz_template.xml  ATLAS_param_BR_lumi_zz_toy.xml  ATLAS_param_BR_zz_asimov.xml  ATLAS_param_BR_zz_obs.xml  ATLAS_tension_obs.xml  ATLAS_tension_toy.xml  (+80 more)
cfg/run1_mass/: DFD.xml
cfg/tth/: model_plus.xml  model_plus_NLO.xml
cfg/vv/: combined_VV_HVT_WZ_2000.xml  combined_VV_HVT_WZ_2000_nominal.xml  combined_VV_llqq_lvqq_vvqq_nwa_template.xml  combined_VV_llqq_lvqq_vvqq_qqqq_jes_template.xml  combined_VV_llqq_lvqq_vvqq_qqqq_largeR_template.xml  combined_VV_llqq_lvqq_vvqq_qqqq_nominal_template.xml  combined_VV_llqq_lvqq_vvqq_template.xml  combined_VV_llqq_nominal_template.xml  combined_VV_llqq_template.xml  combined_VV_llqq_vvqq_qqqq_template.xml  combined_VV_lvqq_template.xml  combined_VV_lvqq_vvqq_template.xml  generateJESTemp.py  (+27 more)
dtd/: Combination.dtd  Organization.dtd
inc/: Background.h  CommonHead.h  Organizer.h  ResponseFunction.h  RooFitHead.h  RooFormulaVarExt.h  asimovUtil.hh  asimovUtils.h  auxUtil.hh  combiner.h  decorator.h  decoratorOptions.h  editor.h  fitUtil.hh  manager_LinkDef.h  rooCommon.h  splitter.h
interface/: AlgoBase.h  CommonFunc.h  CommonHead.h  CommonOptions.h  FastTemplate.h  HGGRooPdfs.h  HZZ4LRooPdfs.h  HggScalarLineShapePdf.h  Organizer.h  Orgnizer.h  RooBernsteinFast.h  RooFormulaVarExt.h  SimpleCacheSentry.h  VerticalInterpHistPdf.h  asimovUtil.hh  asimovUtils.h  asimovUtilsOptions.h  auxUtil.hh  combiner.h  decorator.h  decoratorOptions.h  fitUtil.hh  manager_LinkDef.h  manager_LinkDef_h_bak  rooCommon.h  statistics.hh
modVBFCP/: README  config.py  genAsi.sh  genComb.sh  genFit.sh  genModGam.sh  genModTau.sh  makeXml.py  prepareInWS.sh  readGamWS.cxx  readTauWS.cxx
scripts/: install_roofitext.sh
src/: Background.cxx  CommonFunc.cxx  FastTemplate.cxx  HGGRooPdfs.cxx  HZZ2L2QRooPdfs.cxx  HZZ4LRooPdfs.cxx  HggScalarLineShapePdf.cxx  Organizer.cxx  Orgnizer.cxx  ResponseFunction.cxx  RooBernsteinFast.cxx  RooFormulaVarExt.cxx  SimpleCacheSentry.cxx  VerticalInterpHistPdf.cxx  asimovUtil.cc  asimovUtils.cxx  auxUtil.cc  combiner.cxx  decorator.cxx  editor.cxx  fitUtil.cc  manager_Dict.cxx  manager_Dict.h  splitter.cxx  statistics.cxx
vbfcpComb/: README  comb_vs_aplusb.py  config.py  drawNLL.py  genAsiComb.sh  genAsiGam.sh  genAsiTau.sh  genCombWS.sh  genGamfit.sh  genHepsub.sh  genTaufit.sh  howToGetNPMag  logNLL.sh  makeXml.py  makeXml.sh  prepareInWS.sh  readTauWS.cxx  rename.sh  run.sh  sysList_yy.py
workspace/: hbb_param.root  hgg_param.root  hlep_param.root
(+211 files in other folders)
